Updated nvim and tmux config
Former-commit-id: b4803d2ea560eb38ce75ca5e621b6d8608cf17b6

--- a/linux/configs/tmux.conf
+++ b/linux/configs/tmux.conf
@@ -1,19 +1,27 @@
+
+set -g default-terminal "screen-256color"
+
 unbind C-b
 set-option -g prefix C-a
-bind-key C-a send-prefix
+bind C-a send-prefix
 
-bind-key -n M-s set-option -g status
+bind -n M-s set-option -g status
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-bind Left swap-window -t -1
-bind Right swap-window -t +1
+# Shift arrow to switch windows and sessions
+bind -n C-Left  previous-window
+bind -n C-Right next-window
+bind -n C-Up  switch-client -n
+bind -n C-Down switch-client -p
+
+bind c move-window -r \; new-window
+bind -n C-S-Left swap-window -t -1
+bind -n C-S-Right swap-window -t +1
+
 
 setw -g monitor-activity on
 
@@ -22,7 +30,6 @@ bind r source-file ~/.tmux.conf
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
-set -g default-terminal "putty-256color"
 
 # don't rename windows automatically
 set-option -g allow-rename off
@@ -35,6 +42,8 @@ set -sg escape-time 0
 
 # Info on left (I don't have a session display for now)
 set -g status-left ''
+set -g status-left-length 20
+#colour248
 
 # loud or quiet?
 set-option -g visual-activity off
@@ -52,22 +61,19 @@ setw -g mode-bg colour238
 # }
 # The panes {
 
-set -g pane-border-bg colour1
+set -g pane-border-bg White
 set -g pane-border-fg colour249
-set -g pane-active-border-bg colour0
-set -g pane-active-border-fg Cyan 
+set -g pane-active-border-bg White
+set -g pane-active-border-fg Blue 
 
 # }
 # The statusbar {
-
 set -g status-position bottom
 set -g status-bg colour252
 set -g status-fg colour137
-set -g status-attr dim
-set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour248] %H:%M ~ %d/%m '
+set -g status-right '#[fg=colour0,bg=colour211] #S #[fg=colour233,bg=colour248] %H:%M ~ %d/%m '
+#set -g status-left ''
 set -g status-right-length 50
-set -g status-left-length 20
 
 setw -g window-status-current-fg Black 
 setw -g window-status-current-bg colour14
