Removed plugin supertab from vim.\nAvoided tmux to be detached when closed a session
Former-commit-id: 1c709f44b55f3ce7a27a964dc8bd5e46bc347464

--- a/linux/configs/tmux.conf
+++ b/linux/configs/tmux.conf
@@ -3,6 +3,7 @@ set -g default-terminal "screen-256color"
 
 unbind C-b
 set-option -g prefix C-a
+set-option -g detach-on-destroy off
 bind C-a send-prefix
 
 bind -n M-s set-option -g status
