--- a/linux/configs/tmux.conf
+++ b/linux/configs/tmux.conf
@@ -62,10 +62,10 @@ setw -g mode-bg colour238
 # }
 # The panes {
 
-set -g pane-border-bg White
+set -g pane-border-bg Black
 set -g pane-border-fg colour249
-set -g pane-active-border-bg White
-set -g pane-active-border-fg Blue 
+set -g pane-active-border-bg Black
+set -g pane-active-border-fg Blue
 
 # }
 # The statusbar {
@@ -76,7 +76,7 @@ set -g status-right '#[fg=colour0,bg=colour211] #S #[fg=colour233,bg=colour248] 
 #set -g status-left ''
 set -g status-right-length 50
 
-setw -g window-status-current-fg Black 
+setw -g window-status-current-fg Black
 setw -g window-status-current-bg colour14
 setw -g window-status-current-format ' #W#F '
 
