--- a/linux/configs/tmux.conf
+++ b/linux/configs/tmux.conf
@@ -1,5 +1,7 @@
 
-set -g default-terminal "screen-256color"
+set -g default-terminal 'xterm-256color' # replace this with your custom term-info name
+set -ga terminal-overrides ',*:Tc' # this is for 256 color
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # this is for the cursor shape
 
 unbind C-b
 set-option -g prefix C-a
@@ -62,15 +64,15 @@ setw -g mode-bg colour238
 # }
 # The panes {
 
-set -g pane-border-bg Black
-set -g pane-border-fg colour249
-set -g pane-active-border-bg Black
-set -g pane-active-border-fg Blue
+set -g pane-border-bg colour234
+set -g pane-border-fg colour236
+set -g pane-active-border-bg colour234
+set -g pane-active-border-fg colour4
 
 # }
 # The statusbar {
 set -g status-position bottom
-set -g status-bg colour233
+set -g status-bg colour236
 set -g status-fg colour137
 set -g status-right '#[fg=colour0,bg=colour211] #S #[fg=colour233,bg=colour243] %H:%M ~ %d/%m '
 #set -g status-left ''
@@ -81,7 +83,7 @@ setw -g window-status-current-bg colour243
 setw -g window-status-current-format ' #W#F '
 
 setw -g window-status-fg colour0
-setw -g window-status-bg colour235
+setw -g window-status-bg colour236
 setw -g window-status-attr none
 setw -g window-status-format ' #W#F '
 
