--- a/linux/configs/tmux.conf
+++ b/linux/configs/tmux.conf
@@ -64,21 +64,21 @@ setw -g mode-bg colour238
 # }
 # The panes {
 
-set -g pane-border-bg colour234
+set -g pane-border-bg colour0
 set -g pane-border-fg colour236
-set -g pane-active-border-bg colour234
-set -g pane-active-border-fg colour4
+set -g pane-active-border-bg colour0
+set -g pane-active-border-fg colour14
 
 # }
 # The statusbar {
 set -g status-position bottom
 set -g status-bg colour236
 set -g status-fg colour137
-set -g status-right '#[fg=colour0,bg=colour211] #S #[fg=colour233,bg=colour243] %H:%M ~ %d/%m '
+set -g status-right '#[fg=colour0,bg=colour211] #S #[fg=colour0,bg=colour243] %H:%M ~ %d/%m '
 #set -g status-left ''
 set -g status-right-length 50
 
-setw -g window-status-current-fg Black
+setw -g window-status-current-fg colour0
 setw -g window-status-current-bg colour243
 setw -g window-status-current-format ' #W#F '
 
