--- a/linux/configs/tmux.conf
+++ b/linux/configs/tmux.conf
@@ -4,9 +4,12 @@ set -ga terminal-overrides ',*:Tc' # this is for 256 color
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # this is for the cursor shape
 
 unbind C-b
+bind C-a send-prefix
 set-option -g prefix C-a
 set-option -g detach-on-destroy off
-bind C-a send-prefix
+
+bind \ split-window -h
+bind - split-window -v
 
 bind -n M-s set-option -g status
 
