--- a/linux/configs/tmux.conf
+++ b/linux/configs/tmux.conf
@@ -1,7 +1,7 @@
 
 set -g default-terminal 'screen-256color' # replace this with your custom term-info name
-#set -ga terminal-overrides ',*:Tc' # this is for 256 color
-#set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # this is for the cursor shape
+set -ga terminal-overrides ',*:Tc' # this is for 256 color
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # this is for the cursor shape
 
 unbind C-b
 bind C-a send-prefix
