--- a/linux/configs/SpaceVim.d/init.toml
+++ b/linux/configs/SpaceVim.d/init.toml
@@ -27,11 +27,14 @@
 # Enable autocomplete layer
 [[layers]]
 name = 'autocomplete'
-auto-completion-return-key-behavior = "complete"
-auto-completion-tab-key-behavior = "smart"
+#auto-completion-return-key-behavior = "complete"
+#auto-completion-tab-key-behavior = "smart"
 
 [[layers]]
 name = 'fzf'
+
+[[layers]]
+name = "VersionControl"
 
 [[layers]]
 name = 'shell'
