--- a/linux/configs/tmux.conf
+++ b/linux/configs/tmux.conf
@@ -1,7 +1,7 @@
 
 set -g default-terminal 'screen-256color' # replace this with your custom term-info name
-set -ga terminal-overrides ',*:Tc' # this is for 256 color
-set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # this is for the cursor shape
+#set -ga terminal-overrides ',*:Tc' # this is for 256 color
+#set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # this is for the cursor shape
 
 unbind C-b
 bind C-a send-prefix
@@ -13,10 +13,24 @@ bind - split-window -v
 
 bind -n M-s set-option -g status
 
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind -n M-Left  if-shell "$is_vim" "send-keys M-Left"  "select-pane -L"
+bind -n M-Right if-shell "$is_vim" "send-keys M-Right" "select-pane -R"
+bind -n M-Up    if-shell "$is_vim" "send-keys M-Up"    "select-pane -U"
+bind -n M-Down  if-shell "$is_vim" "send-keys M-Down"  "select-pane -D"
+bind -n M-\     if-shell "$is_vim" "send-keys M-\\"    "select-pane -l"
+bind -T copy-mode-vi M-Left  select-pane -L
+bind -T copy-mode-vi M-Right select-pane -R
+bind -T copy-mode-vi M-Up    select-pane -U
+bind -T copy-mode-vi M-Down  select-pane -D
+bind -T copy-mode-vi M-\     select-pane -l
+
+# bind -n M-Left select-pane -L
+# bind -n M-Right select-pane -R
+# bind -n M-Up select-pane -U
+# bind -n M-Down select-pane -D
 
 # Shift arrow to switch windows and sessions
 bind -n C-Left  previous-window
