--- a/linux/configs/tmux.conf
+++ b/linux/configs/tmux.conf
@@ -81,9 +81,9 @@ setw -g mode-bg colour238
 # }
 # The panes {
 
-set -g pane-border-bg colour0
+set -g pane-border-bg default
 set -g pane-border-fg colour236
-set -g pane-active-border-bg colour0
+set -g pane-active-border-bg default
 set -g pane-active-border-fg colour14
 
 # }
