--- a/linux/configs/tmux.conf
+++ b/linux/configs/tmux.conf
@@ -1,4 +1,3 @@
-
 set -g default-terminal 'screen-256color' # replace this with your custom term-info name
 set -ga terminal-overrides ',*:Tc' # this is for 256 color
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # this is for the cursor shape
@@ -27,11 +26,6 @@ bind -T copy-mode-vi M-Up    select-pane -U
 bind -T copy-mode-vi M-Down  select-pane -D
 bind -T copy-mode-vi M-\     select-pane -l
 
-# bind -n M-Left select-pane -L
-# bind -n M-Right select-pane -R
-# bind -n M-Up select-pane -U
-# bind -n M-Down select-pane -D
-
 # Shift arrow to switch windows and sessions
 bind -n C-Left  previous-window
 bind -n C-Right next-window
@@ -42,9 +36,6 @@ bind c move-window -r \; new-window
 bind -n C-S-Left swap-window -t -1
 bind -n C-S-Right swap-window -t +1
 
-
-setw -g monitor-activity on
-
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
@@ -52,7 +43,7 @@ bind r source-file ~/.tmux.conf
 set -g mouse on
 
 # don't rename windows automatically
-set-option -g allow-rename off
+set -g allow-rename off
 
 set -sg escape-time 0
 
@@ -60,58 +51,45 @@ set -sg escape-time 0
 ### DESIGN CHANGES ###
 ######################
 
-# Info on left (I don't have a session display for now)
-set -g status-left ''
-
 # loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+set -g monitor-activity off
+set -g bell-action none
 
 # The modes {
-setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
+
+set -g clock-mode-colour colour135
+set -g mode-style fg=colour196,bg=colour238,bold
 
 # }
 # The panes {
 
-set -g pane-border-bg default
-set -g pane-border-fg colour236
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour14
+set -g pane-border-style bg=default,fg=colour236
+set -g pane-active-border-style bg=default,fg=colour14
 
 # }
 # The statusbar {
+
+set -g status-style bg=colour236,fg=colour137
 set -g status-position bottom
-set -g status-bg colour236
-set -g status-fg colour137
+set -g status-left ''
 set -g status-right '#[fg=colour0,bg=colour211] #S #[fg=colour0,bg=colour243] %H:%M ~ %d/%m '
-#set -g status-left ''
 set -g status-right-length 50
 
-setw -g window-status-current-fg colour0
-setw -g window-status-current-bg colour243
-setw -g window-status-current-format ' #W#F '
+set -g window-status-current-style fg=colour0,bg=colour243
+set -g window-status-current-format ' #W#F '
 
-setw -g window-status-fg colour0
-setw -g window-status-bg colour236
-setw -g window-status-attr none
-setw -g window-status-format ' #W#F '
+set -g window-status-style fg=colour0,bg=colour236,none
+set -g window-status-format ' #W#F '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+set -g window-status-bell-style fg=colour255,bg=colour1,bold
 
 # }
 # The messages {
 
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
+set -g message-style fg=colour232,bg=colour166,bold
 
 # }
 
