Disabled special characters from SpaceVim

--- a/linux/configs/SpaceVim.d/init.toml
+++ b/linux/configs/SpaceVim.d/init.toml
@@ -18,11 +18,12 @@
     enable_guicolors = false
     # Disable statusline separator, if you want to use other value, please
     # install nerd fonts
-    statusline_separator = "arrow"
-    statusline_inactive_separator = "arrow"
-    buffer_index_type = 4
-    enable_tabline_filetype_icon = true
+    statusline_separator = "nil"
+    statusline_inactive_separator = "nil"
+    statusline_unicode_symbols = false
+    enable_tabline_filetype_icon = false
     enable_statusline_mode = false
+    buffer_index_type = 4
     bootstrap_before = "myspacevim#before"
     bootstrap_after = "myspacevim#after"
 
