Extra tmux configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,9 @@ bind C-a send-prefix
 set-option -g prefix C-a
 set-option -g detach-on-destroy off
 
+# set the scrollback
+set -g history-limit 200000
+
 bind -n M-s set-option -g status
 
 # Smart pane switching with awareness of Vim splits.
